change folder structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 	    <title>LIANG SHI</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:bold" rel="stylesheet">
@@ -42,7 +42,7 @@
 
             <div class="content_list">
                 <a href="http://cargocollective.com/shiliang/Photography/Side-Effects">
-                <img class="image_list" src="images/sideeffects.jpg"/>
+                <img class="image_list" src="assets/images/sideeffects.jpg"/>
                 </a>
                 <div class="content_tag">photography</div>
                 <div class="content_heading">Side Effects</div>
@@ -54,7 +54,7 @@
 
             <div class="content_list">
                 <a href="http://cargocollective.com/shiliang/Photography/Cloud">
-                <img class="image_list" src="images/cloud.jpg"/>
+                <img class="image_list" src="assets/images/cloud.jpg"/>
                 </a>
                 <div class="content_tag">photography</div>
                 <div class="content_heading">Cloud</div>
@@ -72,7 +72,7 @@
 
              <div class="content_list">
                 <a href="http://cargocollective.com/shiliang/Graphic-Design/Helium">
-                <img class="image_list" src="images/helium.jpg"/>
+                <img class="image_list" src="assets/images/helium.jpg"/>
                 </a>
                 <div class="content_tag">graphic design</div>
                 <div class="content_heading">Helium</div>
@@ -84,7 +84,7 @@
 
             <div class="content_list">
                 <a href="http://cargocollective.com/shiliang/Graphic-Design/Side-Effects-Handmade-book">
-                <img class="image_list" src="images/sideeffectbook.jpg"/>
+                <img class="image_list" src="assets/images/sideeffectbook.jpg"/>
                 </a>
                 <div class="content_tag">graphic design</div>
                 <div class="content_heading">Side Effects Handmade Book</div>
@@ -96,7 +96,7 @@
 
             <div class="content_list">
                 <a href="http://cargocollective.com/shiliang/Graphic-Design/Otl-Aicher-2015-Exhibition">
-                <img class="image_list" src="images/otl.jpg"/>
+                <img class="image_list" src="assets/images/otl.jpg"/>
                 </a>
                 <div class="content_tag">graphic design</div>
                 <div class="content_heading">Otl Aicher 2015 Exhibition</div>
@@ -111,7 +111,7 @@
             
             <div class="content_list">
                 <a href="http://cargocollective.com/shiliang/User-Interface/Lianlian-Fitness">
-                <img class="image_list" src="images/lianlianfitness.jpg"/>
+                <img class="image_list" src="assets/images/lianlianfitness.jpg"/>
                 </a>
                 <div class="content_tag">user interface</div>
                 <div class="content_heading">Lianlian App User Interface</div>
@@ -147,13 +147,13 @@
         <div class="footer">
 
               <a class="icon_socialmedia" href="https://www.facebook.com/FrankShih7010">
-                  <img src="images/facebook.png" style="width:20px; height:20px;"/>
+                  <img src="assets/images/facebook.png" style="width:20px; height:20px;"/>
               </a>
               <a class="icon_socialmedia" href="https://www.instagram.com/shiliangbj12">
-                  <img src="images/instagram.png" style="width:20px; height:20px;"/>
+                  <img src="assets/images/instagram.png" style="width:20px; height:20px;"/>
               </a>
               <a class="icon_socialmedia" href="https://twitter.com/shiliangbj12">
-                  <img src="images/twitter.png" style="width:20px; height:20px;"/>
+                  <img src="assets/images/twitter.png" style="width:20px; height:20px;"/>
               </a>
         </div>
 
