--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:bold" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:itaic" rel="stylesheet">
-
-        <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
 	    <!--This is the homework of web class day 2-->
     </head>    
     <body>
